Bug 469795 - File names are missing when opening a static library
Summary: File names are missing when opening a static library
Status: RESOLVED FIXED
Alias: None
Product: ark
Classification: Applications
Component: general (other bugs)
Version First Reported In: 23.04.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Elvis Angelaccio
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-15 09:40 UTC by Antonio Rojas
Modified: 2023-05-16 21:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Antonio Rojas 2023-05-15 09:40:24 UTC
When opening a static library (*.a) with ark, the column with the file names is missing and there is (apparently) no way to bring it back.
Comment 1 Antonio Rojas 2023-05-15 15:30:14 UTC
Libarchive reports a top "/" entry, which is not identified as a directory.
Comment 2 Bug Janitor Service 2023-05-15 15:42:33 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/173
Comment 3 Bug Janitor Service 2023-05-15 18:13:17 UTC
A possibly relevant merge request was started @ https://invent.kde.org/utilities/ark/-/merge_requests/174
Comment 4 Antonio Rojas 2023-05-16 21:44:01 UTC
Git commit 4a862763caf2fa8ff1436611fe07bdbcf9b6faa6 by Antonio Rojas.
Committed on 16/05/2023 at 21:43.
Pushed by arojas into branch 'master'.

lastPathSegment: don't strip slash if it is the only character in the path

Fixes displaying file names in static libraries

M  +3    -1    kerfuffle/util.h

https://invent.kde.org/utilities/ark/commit/4a862763caf2fa8ff1436611fe07bdbcf9b6faa6
Comment 5 Antonio Rojas 2023-05-16 21:51:01 UTC
Git commit 7ef6539de2c5d00f1b440132c7ff1a43832bc094 by Antonio Rojas.
Committed on 16/05/2023 at 21:44.
Pushed by arojas into branch 'release/23.04'.

lastPathSegment: don't strip slash if it is the only character in the path

Fixes displaying file names in static libraries


(cherry picked from commit 4a862763caf2fa8ff1436611fe07bdbcf9b6faa6)

M  +3    -1    kerfuffle/util.h

https://invent.kde.org/utilities/ark/commit/7ef6539de2c5d00f1b440132c7ff1a43832bc094