lastPathSegment: don't strip slash if it is the only character in the path

Fixes displaying file names in static libraries

BUG: 469795


(cherry picked from commit 4a862763caf2fa8ff1436611fe07bdbcf9b6faa6)